[package]
name = "bevy_spritefusion"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Bevy plugin for loading Sprite Fusion tilemap exports"
repository = "https://github.com/Hugo-Dz/bevy_spritefusion"
keywords = ["bevy", "tilemap", "spritefusion", "gamedev", "2d"]
categories = ["game-development", "graphics", "rendering"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_sprite"] }
bevy_ecs_tilemap = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }

[[example]]
name = "basic"
path = "examples/basic.rs"
